2008-12-02 Jim Garlick <garlick@llnl.gov>

	* man/* : Fix misc. typos.

	* lib/libpowerman.c : Fix a use-after-free bug in _list_free().

	* test/t49* : Use iterator functions.

2008-12-01 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.3.1

	* man/libopwerman.3.in, man/vpcd.8.in : New.

	* man/* : Process through autoconf to get version and path
	substitution.  Normalize headers and SEE ALSO section.

	* test/t49* : Simple test of libpowerman API using cli.c.

	* test/cli.c : Modified to reflect API changes.

	* lib/libpowerman.[ch] : Represent all server errors in pm_err_t.
	Add a flags argument to pm_connect() and a flag for IPv6 only.

	* powerman.spec : Add devel and libs subpackages.

	* lib/* : Move lib sources from src.

	* : Continued audit for debian [Arnaud Quette]
	- rename autoreconf to autogen.sh, I misunderstood previous suggestion.
	- drop sysconfdir from libpowerman.pc.in
	- install powerman.conf.example as the actual config file
	- install vpcd as part of the base package

2008-11-26 Jim Garlick <garlick@llnl.gov>

	* scripts/Makefile.am : Create /var/run/powerman during install.

	* src/powermand.c, src/daemon.c : Don't chdir to /var/run/powerman
	in daemon initialization.  Let the init script do that for us.
	Also don't attempt to create /var/run/powerman.

	* src/powermand.c : Drop --force-notroot option and do not
	insist that the daemon run as root.

	* config/ac_runas.m4 : New.

	* src/Makefile.am : Install pkg-config file and header.

	* config/ac_pkgconfig.m4 : New [Arnaud Quette].

	* src/libpowreman.pc.in : New [Arnaud Quette]

	* configure.ac : Add support for above.

2008-11-25 Jim Garlick <garlick@llnl.gov>

	* : Add some missing copyright headers.

	* src/libpowerman.[ch] : Some refactoring and cleanup.

2008-11-20 Jim Garlick <garlick@llnl.gov>

	* : Audit for debian [Arnaud Quette]
	- rename bootstrap to autoreconf (convention)
	- remove htdocs/powerman47.jpg (redistribution rights)
	- fix AUTHORS typo