@@ -34,7 +34,7 @@ DESC="PowerMan"
 DAEMON="$sbindir/powermand"
 #DAEMON_ARGS=
 #CONFIG=
-PIDFILE="$localstatedir/run/powerman/powermand.pid"
+#PIDFILE=
 #NICE=
 USER=@RUN_AS_USER@
 #SIGHUP_RELOAD=
